2008-06-09  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/find_new_ids.c: Change find_new_uid() and find_new_gid()
	prototypes to use a bool for their first argument (sys_user /
	sys_group).

2008-06-09  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/console.c: Change is_listed() prototype to return a bool.
	The default parameter should also be a bool.
	* libmisc/console.c: Add brackets and parenthesis.
	* libmisc/console.c: Avoid assignments in comparisons.
	* libmisc/console.c: Change console() prototype to return a bool.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/sgetspent.c: Add brackets and parenthesis.
	* lib/sgetspent.c: Avoid assignments in comparisons.
	* lib/sgetspent.c: Avoid implicit conversion of pointers / chars
	to booleans.
	* lib/sgetspent.c: Avoid multi-statements lines.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/sgetpwent.c: Avoid implicit conversion of pointers / chars to
	booleans.
	* lib/sgetpwent.c: Add brackets and parenthesis.
	* lib/sgetpwent.c: Return NULL instead of 0.
	* lib/sgetpwent.c: Do not check twice if fields[2] and fields[3]
	are not empty.
	* lib/sgetpwent.c: Avoid assignments in comparisons.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/getdate.y: abbrev is a bool.
	* libmisc/getdate.y: Avoid implicit conversion of pointers / chars /
	integers to booleans.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/prototypes.h: Fix prototypes according to earlier changes
	(usage of the bool type).
	* lib/prototypes.h: Add the arguments' name to the prototypes.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/groupio.h: Add protection against multiple inclusions.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/pwio.h: Add protection against multiple inclusions.
	* lib/pwio.c: The changed, isopen, locked, and readonly fields